  minimal because you can just select the relevant fields and not worry
  about tables being joined in to the query that are not needed; this makes
  it much easier to write queries that will run well on large databases
- More support for configuring case-insensitive order-by
- Support for java.util.UUID sequenced primary IDs; can be configured
  per-entity and/or per-datasource


Non-backward-compatible changes:

- Removed id-very-long entity field type and increased default length of id
  type to 40 and id-long type to 255.
- Changed *SubscreensItem.userId* to *userGroupId* for greater flexibility
  setting up subscreen structures and menus
-- this is consistent with how other database-driven artifacts are
   structured
-- to have a record apply to all users use the ALL_USERS userGroupId that
   all users are automatically a member of
-- for migrating other data a user will have to be a member of a group and
   that group can be a single-user group or you can simplify existing data
   by consolidating users into groups that have the same subscreens

Bug Fixes:

- Fixed bug where secondary sequenced ID (setSequencedIdSecondary() method)
  was not finding IDs of existing records causing conflicting IDs to be
  generated
- Fixed bug with EntityFindBase.updateAll() to not use EntityListIterator
  as it caused problems trying to update records with the ResultSet open
- Added support for @confirmation attribute for hidden-form type links
- Fixed issue where transition.path-parameter values were not making it
  into the context since parameters were already added to the context
- Fixed issue in Data View screen with related entities using the full
  entity name (name with package)
- Updated startup in embedded mode to put jar files in a local temporary
  directory and build files to delete it just in case it doesn't get
  cleaned up on exit; should solve problem with dirty exit leaving temp
  files in the OS temporary file location which can be hard to find
